fix: (Resume): Include font styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
 	<meta name="apple-mobile-web-app-title" content="eduardo-resume">
-	<link href="https://fonts.googleapis.com/css?family=Roboto" rel="preload" as="style">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:500,900" rel="preload" as="style">
 	<link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
 	<!-- Add to home screen for Windows -->
 	<meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/msapplication-icon-144x144.png">
